--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,9 @@
   "command": {
     "version": {
       "exact": true
+    },
+    "publish": {
+      "registry": "https://registry.npmjs.org/"
     }
   },
 
