--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cwm/hooks",
+  "name": "@cwmont/hooks",
   "version": "0.0.3",
   "description": "通用hooks",
   "main": "lib/index.js",
