--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     }
   },
   "include": ["./typings.d.ts", "packages/**/*.tsx", "packages/**/*.ts"],
-  "exclude": ["node_modules", "lib", "es", "dist", "typings"]
+  "exclude": ["node_modules", "lib", "es", "dist", "typings",".vscode"]
 }
