--- a/packages/pro-components/package.json
+++ b/packages/pro-components/package.json
@@ -34,5 +34,6 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.14.0"
-  }
+  },
+  "gitHead": "d9c7d7f6ef5e70bd466d915c85ef5b7926fd5eaf"
 }
