--- a/packages/pro-components/package.json
+++ b/packages/pro-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cwmont/pro-components",
-  "version": "0.0.10",
+  "version": "0.0.11-alpha.0",
   "description": "通用公共组件",
   "main": "lib/index.js",
   "module": "es/index.js",
