--- a/packages/pro-components/package.json
+++ b/packages/pro-components/package.json
@@ -35,5 +35,10 @@
   "dependencies": {
     "@babel/runtime-corejs3": "^7.14.0"
   },
-  "gitHead": "20d75ee0f7e36094e23f7bf4a95f8fdaa3426888"
+  "gitHead": "20d75ee0f7e36094e23f7bf4a95f8fdaa3426888",
+  "keywords": [
+    "地图下钻",
+    "echarts",
+    "飞线图"
+  ]
 }
